--- a/settings.gradle
+++ b/settings.gradle
@@ -5,11 +5,20 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+    }
+    buildscript {
+        //...
+        dependencies {
+            classpath 'com.android.tools.build:gradle:7.2.1'
+
+            // ...
+        }
     }
 }
 rootProject.name = "Dice Roller"
